# mindmee

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
backend/: .env  .gitignore  Cargo.toml  Procfile  Rocket.toml
backend/.hooks/: setup.sh
backend/migrations/2021-12-02-231540_create_notes/: down.sql  up.sql
backend/src/: diesel_schema.rs  main.rs
backend/src/analysis/: aggregates.rs  mod.rs
backend/src/api/endpoints/: commands.rs  mod.rs  notes.rs
backend/src/crud/: mod.rs  notes.rs
backend/src/models/: notes.rs
backend/src/schemas/: notes.rs
frontend/: package-lock.json  package.json
frontend/my-app/: README.md  capacitor.config.json  ionic.config.json  package-lock.json  package.json
frontend/my-app/android/app/: build.gradle
frontend/my-app/src/: App.css  App.js  MainPage.css  MainPage.js  Navigation.css  Navigation.js  Tags.css  globals.js  index.css  index.js
frontend/my-app/src/entry/: JournalEntry.js  MainEntry.js  MoodEntry.js  TagsEntry.css  TagsEntry.js  journalentry.css  saveToLocal.js
frontend/my-app/src/summary/: JournalSummary.css  JournalSummary.js  JournalSummaryDetail.css  JournalSummaryDetail.js  MainSummary.js  (+10 more)
my-app/src/: App.js  MainPage.js  Navigation.js
my-app/src/entry/: JournalEntry.js  MainEntry.js  MoodEntry.js  TagsEntry.js
my-app/src/summary/: JournalSummary.js  JournalSummaryDetail.js  MainSummary.js  MoodSummary.js  MoodSummaryDetail.js  TagsSummary.js  TagsSummaryDetail.js
sandbox/: Cargo.toml
src/api/endpoints/: notes.rs
src/crud/: users.rs
src/models/: notes.rs  users.rs
(+12 files in other folders)
