[package]
name = "backend"
version = "0.1.0"
authors = ["tobiball <tobiball@gmail.com>"]
edition = "2021"

[dependencies]
# Diesel ORM
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.0", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
diesel_migrations = "1.4.0"

# Rocket REST framework
rocket = "0.4.9"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "uuid"] }
rocket_cors = "0.5.2"

# Serializer/deserializer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.116"

# Logger
slog = "2.5.2"
slog-term = "2.6.0"

# General purpose dependencies
dotenv = "0.15.0"
anyhow = "1.0.32"
uuid = { version = ">=0.7.0, <0.9.0", features = ["v4", "serde"] }
slog-async = "2.5.0"
